Costs Get Funktionen implementiert, sowohl im Forntend als auch im Backend
